--- a/FinanzasBGX.Web/web/template/menu.xhtml
+++ b/FinanzasBGX.Web/web/template/menu.xhtml
@@ -18,7 +18,7 @@
                 </h:link>
             </li>
             <li class="dropdown">
-                <h:link value="#{bundle.CompraTitle}">
+                <h:link value="#{bundle.CompraTitle}" outcome="/compra/CompraMes">
                 </h:link>
             </li>
             <li class="">
