--- a/FinanzasBGX.Web/web/template/ventas.xhtml
+++ b/FinanzasBGX.Web/web/template/ventas.xhtml
@@ -40,7 +40,7 @@
         </div>
        
         <div class="col-9">
-            <h1>
+            <h1 style="margin-top: 10px">
                 <ui:insert name="title">#{bundle.VentaTitle}</ui:insert>
             </h1>
             <ui:insert name="body"></ui:insert>
