-Graficas de Venta actualizadas -Graficas de Compra actualizadas

--- a/FinanzasBGX.Web/web/template/compras.xhtml
+++ b/FinanzasBGX.Web/web/template/compras.xhtml
@@ -30,7 +30,12 @@
                 </li>
                 <li>
                 <h:form>
-                    <h:commandLink action="/compra/Graficas" value="#{bundle.GraficasTitle}"/>
+                    <h:commandLink action="/compra/GraficaActual" value="#{bundle.GraficaActualTitle}"/>
+                </h:form>
+                </li>
+                <li>
+                <h:form>
+                    <h:commandLink action="/compra/GraficaHistorica" value="#{bundle.GraficaHistoricaTitle}"/>
                 </h:form>
                 </li>
             </ul>
