--- a/FinanzasBGX.Web/web/template/ventas.xhtml
+++ b/FinanzasBGX.Web/web/template/ventas.xhtml
@@ -26,7 +26,12 @@
                 </li>
                 <li>
                 <h:form>
-                    <h:commandLink action="/venta/Graficas" value="#{bundle.GraficasTitle}"/>
+                    <h:commandLink action="/venta/GraficaActual" value="#{bundle.GraficaActualTitle}"/>
+                </h:form>
+                </li>
+                <li>
+                <h:form>
+                    <h:commandLink action="/venta/GraficaHistorica" value="#{bundle.GraficaHistoricaTitle}"/>
                 </h:form>
                 </li>
                 <li>
