Se agrega pendiente por cobrar

--- a/FinanzasBGX.Web/web/template/menu.xhtml
+++ b/FinanzasBGX.Web/web/template/menu.xhtml
@@ -22,7 +22,7 @@
                 </h:link>
             </li>
             <li class="">
-                <h:link value="#{bundle.PendienteCobrarTitle}">
+                <h:link value="#{bundle.PendienteCobrarTitle}" outcome="/pendiente/PorCobrar">
                 </h:link>
             </li>
             <li class="">
