--- a/FinanzasBGX.Web/web/template/ventas.xhtml
+++ b/FinanzasBGX.Web/web/template/ventas.xhtml
@@ -8,7 +8,7 @@
     <ui:define name="content">
         <br/>
         <br/>
-        <div class="col-3">
+        <div class="col-3" style="width: 250px">
         <!-- Navigation sidebar -->
         <div class="docs-sidebar">
             <br/>
