--- a/FinanzasBGX.Web/web/template/compras.xhtml
+++ b/FinanzasBGX.Web/web/template/compras.xhtml
@@ -7,7 +7,7 @@
     <ui:define name="content">
         <br/>
         <br/>
-        <div class="col-3">
+        <div class="col-3" style="width: 250px">
         <!-- Navigation sidebar -->
         <div class="docs-sidebar">
             <br/>
