--- a/FinanzasBGX.Web/web/template/master_template.xhtml
+++ b/FinanzasBGX.Web/web/template/master_template.xhtml
@@ -31,6 +31,6 @@
         </ui:insert>
         
     </h:body>
-<script src="resources/js/jquery.js"></script>
-<script src="resources/js/furatto.min.js"></script>
+<script src="/FinanzasBGX.Web/resources/js/jquery.js"></script>
+<script src="/FinanzasBGX.Web/resources/js/furatto.min.js"></script>
 </html>
