Se agrega pendiente por producir

--- a/FinanzasBGX.Web/web/template/menu.xhtml
+++ b/FinanzasBGX.Web/web/template/menu.xhtml
@@ -26,7 +26,7 @@
                 </h:link>
             </li>
             <li class="">
-                <h:link value="#{bundle.PendienteProducirTitle}">
+                <h:link value="#{bundle.PendienteProducirTitle}" outcome="/pendiente/PorProducir">
                 </h:link>
             </li>
             <li class="">
