--- a/FinanzasBGX.Web/web/template/menu.xhtml
+++ b/FinanzasBGX.Web/web/template/menu.xhtml
@@ -30,7 +30,7 @@
                 </h:link>
             </li>
             <li class="">
-                <h:link value="#{bundle.InventarioTitle}">
+                <h:link value="#{bundle.InventarioTitle}" outcome="/pendiente/Inventario">
                 </h:link>
             </li>
           </ul>
